# pcloud

./: .dockerignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile  readme.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: docker.yml  main.yml  release-plz.yml  testing.yml
cli/: CHANGELOG.md  Cargo.toml  Dockerfile  readme.md
cli/src/: app.rs  config.rs  main.rs  tests.rs
cli/src/cmd/: download.rs  list.rs  mod.rs  oauth.rs  upload.rs
cli/src/file/: delete.rs  download.rs  mod.rs  moving.rs  rename.rs  upload.rs
cli/src/folder/: common.rs  create.rs  delete.rs  download.rs  list.rs  mod.rs  sync.rs  upload.rs
cli/src/helper/: file.rs  mod.rs  remote.rs
fuse/: Cargo.toml  Dockerfile  readme.md
fuse/src/: config.rs  fs.rs  lib.rs  main.rs  service.rs
fuse/tests/: mocked.rs
http-server/: CHANGELOG.md  Cargo.toml  Dockerfile  readme.md
http-server/src/: handler.rs  main.rs  render.rs
http-server/src/render/: macros.rs  mod.rs  style.css
http-server/src/router/: mod.rs
http-server/src/router/by_path/: mod.rs
lib/: CHANGELOG.md  Cargo.toml  readme.md
lib/src/: binary.rs  builder.rs  client.rs  credentials.rs  date.rs  entry.rs  error.rs  http.rs  lib.rs  prelude.rs  region.rs  request.rs
lib/src/auth/: mod.rs  userinfo.rs
lib/src/file/: checksum.rs  copy.rs  delete.rs  download.rs  get_info.rs  get_link.rs  mod.rs  movefile.rs  rename.rs  upload.rs
lib/src/fileops/: close.rs  mod.rs  open.rs  pread.rs  pwrite.rs  read.rs  seek.rs  size.rs
lib/src/folder/: create.rs  delete.rs  list-response.json  list.rs  mod.rs  movefolder.rs  rename.rs
lib/src/general/: get_ip.rs  getdigest.rs  gettoken.rs  mod.rs  oauth2_token.rs  userinfo.rs
lib/src/stream/: audio.rs  file.rs  mod.rs  video.rs
lib/src/streaming/: get_audio_link.rs  get_file_link.rs  get_video_link.rs  mod.rs
lib/tests/: binary.rs  common.rs  http.rs  workflows.rs
proxy/: Cargo.toml  Dockerfile
proxy/src/: main.rs
scripts/: alpine.Dockerfile  builder.Dockerfile  cross-debian.Dockerfile  debian.Dockerfile
src/: common.rs  credentials.rs  data_center.rs  entry.rs  file.rs  folder.rs  lib.rs  request.rs
src/file/: copy.rs  download.rs  get_info.rs  get_link.rs  mod.rs  rename.rs  upload.rs
src/folder/: create.rs  delete.rs  list.rs  mod.rs  rename.rs
tests/: workflows.rs
