[package]
name = "pcloud"
version = "0.1.0"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { default-features = false, features = ["json", "rustls-tls"], version = "^0.11" }
serde = { features = ["derive"], version = "^1.0" }
serde_json = { version = "^1.0" }

[dev-dependencies]
rand = { version = "^0.8" }
tokio = { version = "*", features = ["macros", "rt"] }
