[package]
name = "pcloud-cli"
description = "CLI for pcloud"
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
version = "0.2.0"
edition = "2018"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/jdrouet/pcloud"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcloud = { path = "../lib", version = "^0.2" }
#
async-recursion = { version = "^0.3" }
clap = { version = "3.0.0-beta.5" }
dirs = { version = "^4.0" }
exitcode = { version = "^1.1" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
tokio = { version = "^1.9", features = ["macros", "rt-multi-thread"] }
tracing = { version = "^0.1" }
tracing-subscriber = { version = "^0.2" }
