[package]
name = "pcloud-cli"
description = "CLI for pcloud"
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
version = "0.3.0"
edition = "2018"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/jdrouet/pcloud"

[package.metadata.deb]
extended-description = """
Written in Rust, pcloud-cli is made to be fast, efficient and easy to use.
"""
assets = [
  ["target/release/pcloud-cli", "usr/bin/", "755"],
  ["readme.md", "usr/share/doc/pcloud-cli/README", "644"],
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
protected = []

[dependencies]
pcloud = { default-features = false, features = ["client-http"], path = "../lib", version = "1.1" }
#
async-recursion = { version = "1.0" }
clap = { version = "3.2", features = ["derive"] }
clap-verbosity-flag = { version = "1.0.1" }
dirs = { version = "4.0" }
exitcode = { version = "1.1" }
futures-util = { version = "0.3", default-features = false, features = ["std", "alloc"] }
glob = { version = "0.3" }
hex = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = { version = "0.10" }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
temp-dir = { version = "0.1" }
rand = { version = "0.8" }
