[package]
name = "pcloud-cli"
description = "CLI for pcloud"
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
version = "1.1.0"
edition = "2018"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/jdrouet/pcloud"

[package.metadata.deb]
extended-description = """
Written in Rust, pcloud-cli is made to be fast, efficient and easy to use.
"""
assets = [
    [
        "target/release/pcloud-cli",
        "usr/bin/",
        "755",
    ],
    [
        "readme.md",
        "usr/share/doc/pcloud-cli/README",
        "644",
    ],
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
protected = []

[dependencies]
pcloud = { default-features = false, features = [
    "client-http",
], path = "../lib", version = "2.0" }
#
anyhow = "1.0"
async-channel = "2.3"
clap = { version = "4.5", features = ["derive"] }
# clap-verbosity-flag = { version = "1.0.1" }
dirs = { version = "5.0" }
exitcode = { version = "1.1" }
human-number = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha1_smol = "1.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
temp-dir = { version = "0.1" }
rand = { version = "0.8" }
