[package]
name = "pcloud-fuse"
version = "0.2.0"
edition = "2018"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
description = "Fuse client for pCloud API"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/jdrouet/pcloud"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcloud = { path = "../lib", version = "^0.2" }
#
clap = { version = "3.0.0-beta.5" }
dirs = { version = "^4.0" }
fuser = { version = "^0.11" }
libc = { version = "^0.2" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
ttl_cache = { version = "^0.5" }
tracing = { version = "^0.1" }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
