[package]
name = "pcloud-http-server"
version = "0.2.1"
edition = "2018"
description = "HTTP proxy server for pCloud API"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/jdrouet/pcloud"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcloud = { path = "../lib", version = "1.0" }
#
actix-web = { version = "4.1" }
clap = { version = "3.2", features = ["derive", "env"] }
env_logger = { version = "0.9" }
human_bytes = { version = "0.3", features = ["bibytes"] }
log = { version = "0.4" }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
