[package]
name = "pcloud-http-server"
version = "0.2.3"
edition = "2018"
description = "HTTP proxy server for pCloud API"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/jdrouet/pcloud"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcloud = { path = "../lib", version = "2.0" }
#
axum = { version = "0.7" }
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = { version = "0.11" }
human_bytes = { version = "0.4" }
log = { version = "0.4" }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = { version = "2.1" }
serde = { version = "1.0.206", features = ["derive"] }
thiserror = "1.0.63"
