[package]
name = "pcloud"
version = "0.2.2"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
description = "Library for pCloud API"
license = "MIT"
edition = "2018"
readme = "readme.md"
repository = "https://github.com/jdrouet/pcloud"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# used to remove tests using credentials from environment variables
protected = []

[dependencies]
chrono = { version = "^0.4", features = ["serde"] }
reqwest = { default-features = false, features = ["json", "rustls-tls"], version = "^0.11" }
serde = { features = ["derive"], version = "^1.0" }
serde_json = { version = "^1.0" }
tracing = { version = "0.1" }

[dev-dependencies]
mockito = { version = "^0.30" }
rand = { version = "^0.8" }
tokio = { version = "^1.9", features = ["macros", "rt"] }
tracing-subscriber = { version = "^0.3" }
