[package]
name = "pcloud"
version = "1.1.0"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
description = "Library for pCloud API"
license = "MIT"
edition = "2018"
readme = "readme.md"
repository = "https://github.com/jdrouet/pcloud"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["client-binary", "client-http"]
client-http = ["reqwest"]
client-binary = []
# used to remove tests using credentials from environment variables
protected = []

[dependencies]
async-trait = { version = "0.1" }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { default-features = false, features = ["json", "multipart", "rustls-tls", "stream"], version = "0.12", optional = true }
serde = { features = ["derive"], version = "1.0" }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }

[dev-dependencies]
mockito = { version = "0.31" }
rand = { version = "0.8" }
tokio = { version = "1.9", features = ["macros", "rt"] }
tokio-test = { version = "0.4" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
