[package]
name = "pcloud"
version = "3.1.0"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
description = "Library for pCloud API"
license = "MIT"
edition = "2018"
readme = "readme.md"
repository = "https://github.com/jdrouet/pcloud"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# used to remove tests using credentials from environment variables
protected = []

[dependencies]
bytes = "1.7"
chrono = { version = "0.4", features = ["serde"] }
futures-core = "0.3"
reqwest = { default-features = false, features = [
    "json",
    "multipart",
    "rustls-tls",
    "stream",
], version = "0.12" }
serde = { features = ["derive"], version = "1.0" }
serde_json = { version = "1.0" }
thiserror = "2.0"
tracing = { version = "0.1" }

[dev-dependencies]
mockito = { version = "1.5" }
rand = { version = "0.9" }
tokio = { version = "1.43", features = ["macros", "rt", "rt-multi-thread"] }
tokio-test = { version = "0.4" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
