[package]
name = "pcloud-proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcloud = { path = "../lib", version = "^0.1" }
#
actix-web = { version = "4.0.0-beta.8", default-features = false }
env_logger = { version = "^0.9" }
log = { version = "^0.4" }
